Add select method for start date and end date -to be compeleted: ensure end date is always later than start date -to be completed: establish connection with backend and sending start date and end date as parameters -to be fixed: should be able to see the graph once I click the search not when I double click it maybe a refresh would help?

--- a/frontend/src/app/statistics/statistics.component.html
+++ b/frontend/src/app/statistics/statistics.component.html
@@ -1,10 +1,27 @@
-<div>
+<div style="display: flex; align-items: center">
+  <mat-form-field appearance="fill">
+    <mat-label>Start Date</mat-label>
+    <input matInput [matDatepicker]="startPicker" [(ngModel)]="startDate" />
+    <mat-datepicker-toggle
+      matSuffix
+      [for]="startPicker"></mat-datepicker-toggle>
+    <mat-datepicker #startPicker startView="month"></mat-datepicker>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>End Date</mat-label>
+    <input matInput [matDatepicker]="endPicker" [(ngModel)]="endDate" />
+    <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+    <mat-datepicker #endPicker startView="month"></mat-datepicker>
+  </mat-form-field>
+
   <button mat-raised-button color="accent" (click)="fetchData()">Search</button>
 </div>
+
 <div style="display: block">
   <canvas
     baseChart
-    width="400"
+    width="600"
     height="400"
     [type]="'line'"
     [data]="lineChartData"
