set endDate to time to  be 23-59-59; add check for start and end Date; add alerts

--- a/frontend/src/app/statistics/statistics.component.html
+++ b/frontend/src/app/statistics/statistics.component.html
@@ -10,7 +10,12 @@
 
   <mat-form-field appearance="fill">
     <mat-label>End Date</mat-label>
-    <input matInput [matDatepicker]="endPicker" [(ngModel)]="endDate" />
+    <input
+      matInput
+      [matDatepicker]="endPicker"
+      [matDatepickerFilter]="endDateFilter"
+      [(ngModel)]="endDate"
+      (dateChange)="onEndDateChange($event)" />
     <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
     <mat-datepicker #endPicker startView="month"></mat-datepicker>
   </mat-form-field>
