Bug temporarily fixed for single graph display: using boolean signal; need to rerender or reload the whole graph in the future

--- a/frontend/src/app/statistics/statistics.component.html
+++ b/frontend/src/app/statistics/statistics.component.html
@@ -23,7 +23,7 @@
   <button mat-raised-button color="accent" (click)="fetchData()">Search</button>
 </div>
 
-<div style="display: block">
+<div *ngIf="displayChart" style="display: block">
   <canvas
     baseChart
     width="600"
