widget added, shows but not quite i mean with no functionality need to modify the ts and html files for stats-table.widget

--- a/frontend/src/app/statistics/statistics.component.html
+++ b/frontend/src/app/statistics/statistics.component.html
@@ -61,3 +61,13 @@
     [legend]="lineChartLegend">
   </canvas>
 </div>
+
+<div class="stats-table">
+  <stats-table
+    [originalData_0]="
+      lineChartData.datasets[0] ? lineChartData.datasets[0].data : []
+    "
+    [compareData_0]="
+      lineChartData.datasets[1] ? lineChartData.datasets[1].data : []
+    " />
+</div>
