Move folder to app/coworking and declare component locally; add stats-table widget

--- a/frontend/src/app/coworking/ambassador-home/ambassador-home.component.html
+++ b/frontend/src/app/coworking/ambassador-home/ambassador-home.component.html
@@ -138,7 +138,10 @@
     </mat-card>
   </ng-template>
   <div class="button-container">
-    <button mat-raised-button color="primary" routerLink="/statistics">
+    <button
+      mat-raised-button
+      color="primary"
+      routerLink="/coworking/statistics">
       View Statistics
     </button>
   </div>
