--- a/frontend/src/app/coworking/statistics/statistics.component.html
+++ b/frontend/src/app/coworking/statistics/statistics.component.html
@@ -53,8 +53,10 @@
   </button>
 </div>
 
-<div *ngIf="displayChart" style="display: block">
+<div>
   <canvas
+    *ngIf="displayChart"
+    style="display: block"
     baseChart
     width="600"
     height="400"
@@ -62,6 +64,13 @@
     [data]="lineChartData"
     [options]="lineChartOptions"
     [legend]="lineChartLegend"></canvas>
+</div>
+<div>
+  <button>
+    <mat-slide-toggle [checked]="switchState" (change)="onSwitchChange($event)">
+      Switch Data
+    </mat-slide-toggle>
+  </button>
 </div>
 
 <div class="stats-table">
