formed connection between frontend and backend, but we need to transform the data in the frontend with asynchronous programming, which i dont know how

--- a/frontend/src/app/coworking/statistics/statistics.component.html
+++ b/frontend/src/app/coworking/statistics/statistics.component.html
@@ -53,10 +53,8 @@
   </button>
 </div>
 
-<div>
+<div *ngIf="displayChart" style="display: block">
   <canvas
-    *ngIf="displayChart"
-    style="display: block"
     baseChart
     width="600"
     height="400"
@@ -64,13 +62,6 @@
     [data]="lineChartData"
     [options]="lineChartOptions"
     [legend]="lineChartLegend"></canvas>
-</div>
-<div>
-  <button>
-    <mat-slide-toggle [checked]="switchState" (change)="onSwitchChange($event)">
-      Switch Data
-    </mat-slide-toggle>
-  </button>
 </div>
 
 <div class="stats-table">
