added widgets and css changes

--- a/frontend/src/app/coworking/ambassador-home/ambassador-home.component.html
+++ b/frontend/src/app/coworking/ambassador-home/ambassador-home.component.html
@@ -139,6 +139,7 @@
   </ng-template>
   <div class="button-container">
     <button
+      class="viewStats"
       mat-raised-button
       color="primary"
       routerLink="/coworking/statistics">
