--- a/frontend/src/app/coworking/widgets/search-reports/search-reports.widget.html
+++ b/frontend/src/app/coworking/widgets/search-reports/search-reports.widget.html
@@ -7,7 +7,7 @@
       </mat-panel-description>
     </mat-expansion-panel-header>
     <p class="custom-panel-content">
-      Report 1
+      Report #1
       <button mat-raised-button color="accent" class="custom-panel-button">
         Share
       </button>
