add alerts for save

--- a/frontend/src/app/coworking/statistics/statistics.component.html
+++ b/frontend/src/app/coworking/statistics/statistics.component.html
@@ -58,7 +58,7 @@
     </button>
     <button
       mat-raised-button
-      color="primary"
+      color="accent"
       (click)="saveReport()"
       type="button"
       class="save">
