added frontend method and backend connection, service function for share button- currently set the query name to be a specific string but in the future it should be decided whether to treat the query name as a input string or a constant in the search table widget

--- a/frontend/src/app/coworking/widgets/search-reports/search-reports.widget.html
+++ b/frontend/src/app/coworking/widgets/search-reports/search-reports.widget.html
@@ -8,7 +8,11 @@
     </mat-expansion-panel-header>
     <p class="custom-panel-content">
       Report #1
-      <button mat-raised-button color="accent" class="custom-panel-button">
+      <button
+        mat-raised-button
+        color="accent"
+        (click)="updateShare()"
+        class="custom-panel-button">
         Share
       </button>
     </p>
