changed wording to view shared statistics

--- a/frontend/src/app/coworking/personal-stats/personal-stats.component.css
+++ b/frontend/src/app/coworking/personal-stats/personal-stats.component.css
@@ -75,8 +75,8 @@
     font-weight: bold;
   }
   .chart-container {
-    max-width: 800px; /* Adjust this value as needed */
-    max-height: 500px; /* Adjust this value as needed */
+    max-width: 800px; 
+    max-height: 500px; 
     padding: 15px;
     border: 1px solid #ccc;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
@@ -84,7 +84,7 @@
   }
   
   canvas {
-    max-width: 100%; /* Ensures the canvas (chart) is responsive within the container */
-    height: auto; /* Maintains aspect ratio */
+    max-width: 100%; 
+    height: auto; 
   }
   
