--- a/frontend/src/app/coworking/personal-stats/personal-stats.component.html
+++ b/frontend/src/app/coworking/personal-stats/personal-stats.component.html
@@ -2,7 +2,7 @@
   <h2>Shared Statistics</h2>
 
   <mat-form-field appearance="fill">
-    <mat-label>Select a Query</mat-label>
+    <mat-label>View shared statistics</mat-label>
     <mat-select
       [(value)]="selectedQuery"
       (selectionChange)="selectQueryAndFetchData(selectedQuery)">
