api endpoint debugged for frontend, but now the stats table haa an asynchronous issue if first entered original and input compare

--- a/frontend/src/app/coworking/widgets/stats-table/stats-table.widget.html
+++ b/frontend/src/app/coworking/widgets/stats-table/stats-table.widget.html
@@ -23,6 +23,21 @@
       <td *ngIf="compareData.length">{{ sd.compare }}</td>
     </tr>
     <tr>
+      <td>Mean Stay Time</td>
+      <td>{{ meanStayTime }}</td>
+      <td *ngIf="c_meanStayTime">{{ c_meanStayTime }}</td>
+    </tr>
+    <tr>
+      <td>Most frequent Check-in Hour</td>
+      <td>{{ mostCommonCheckinHour }}</td>
+      <td *ngIf="c_mostCommonCheckinHour">{{ c_mostCommonCheckinHour }}</td>
+    </tr>
+    <tr>
+      <td>Most frequent Check-in Day</td>
+      <td>{{ mostCommonCheckinDay }}</td>
+      <td *ngIf="c_mostCommonCheckinDay">{{ c_mostCommonCheckinDay }}</td>
+    </tr>
+    <tr>
       <td>Outliers</td>
       <td>
         <li *ngFor="let outlier of outliers.original">{{ outlier }}</li>
