--- a/frontend/src/app/coworking/widgets/stats-table/stats-table.widget.html
+++ b/frontend/src/app/coworking/widgets/stats-table/stats-table.widget.html
@@ -25,17 +25,17 @@
     <tr>
       <td>Mean Stay Time</td>
       <td>{{ meanStayTime }}</td>
-      <td *ngIf="c_meanStayTime">{{ c_meanStayTime }}</td>
+      <td *ngIf="compareData.length">{{ c_meanStayTime }}</td>
     </tr>
     <tr>
       <td>Most frequent Check-in Hour</td>
       <td>{{ mostCommonCheckinHour }}</td>
-      <td *ngIf="c_mostCommonCheckinHour">{{ c_mostCommonCheckinHour }}</td>
+      <td *ngIf="compareData.length">{{ c_mostCommonCheckinHour }}</td>
     </tr>
     <tr>
       <td>Most frequent Check-in Day</td>
       <td>{{ mostCommonCheckinDay }}</td>
-      <td *ngIf="c_mostCommonCheckinDay">{{ c_mostCommonCheckinDay }}</td>
+      <td *ngIf="compareData.length">{{ c_mostCommonCheckinDay }}</td>
     </tr>
     <tr>
       <td>Outliers</td>
