bugs needed to be fixed in frontend.

--- a/frontend/src/app/coworking/personal-stats/personal-stats.component.css
+++ b/frontend/src/app/coworking/personal-stats/personal-stats.component.css
@@ -87,4 +87,17 @@
     max-width: 100%; 
     height: auto; 
   }
-  
+  .mat-mdc-card {
+    max-width: 100%;
+}
+
+.viewStats{
+    margin-left: 420px;
+    font-size: 18px;
+    text-decoration: underline;
+    height: 70px;
+    width: 240px;
+    display: flex;
+    align-items: center;
+
+}
