--- a/frontend/src/app/coworking/personal-stats/personal-stats.component.html
+++ b/frontend/src/app/coworking/personal-stats/personal-stats.component.html
@@ -40,14 +40,13 @@
     {{ profile?.first_name }} {{ profile?.last_name }} 's Personal Statistics
   </h2>
 
-  <mat-form-field appearance="fill">
-    <mat-label>View personal statistics</mat-label>
-    <mat-select
-      [(value)]="selectedQuery"
-      (selectionChange)="selectQueryAndFetchData(selectedQuery)">
-      <mat-option *ngFor="let query of sharedQueries" [value]="query">
-        {{ query.name }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+  <div class="button-container">
+    <button
+      class="viewStats"
+      mat-raised-button
+      color="primary"
+      routerLink="/coworking/personal-stats-spec">
+      View My Statistics
+    </button>
+  </div>
 </div>
