new branch w rename & CSS

--- a/frontend/src/app/coworking/statistics/statistics.component.css
+++ b/frontend/src/app/coworking/statistics/statistics.component.css
@@ -61,6 +61,7 @@ mat-divider {
     padding: 10px;
     cursor: pointer; 
     transition: color 0.3s ease;
+    /* margin-left: 10px; */
   }
   .report-line:hover {
     color: #007bff;
