--- a/frontend/src/app/profile/profile-editor/profile-editor.component.html
+++ b/frontend/src/app/profile/profile-editor/profile-editor.component.html
@@ -98,7 +98,7 @@
     class="viewPersonalStats"
     mat-raised-button
     color="primary"
-    routerLink="/coworking/personal-stats">
+    routerLink="/coworking/public-stats">
     View Statistics
   </button>
 </div>
