--- a/frontend/src/app/coworking/personal-stats-spec/personal-stats-spec.component.html
+++ b/frontend/src/app/coworking/personal-stats-spec/personal-stats-spec.component.html
@@ -71,8 +71,8 @@
     </mat-card>
   </ng-template>
 </div>
-<div class="statistics-section">
-  <mat-form-field>
+<div class="statistics-section" style="padding-left: 20px">
+  <mat-form-field style="padding-left: 10px">
     <mat-label>Time Range</mat-label>
     <mat-select [(value)]="timeRange" (selectionChange)="fetchStatistics()">
       <mat-option *ngFor="let range of timeRangeOptions" [value]="range">
@@ -82,10 +82,14 @@
   </mat-form-field>
 
   <div *ngIf="statsFetched">
-    <p>
+    <p style="font-size: 18px; padding-left: 10px; font-weight: 450">
       During the past {{ timeRange }}, you averaged stayed
-      {{ meanStayTime | number }} minutes in XL during visits, which is greater
-      than {{ longerStayPercentage | number: '1.2-2' }}% of the community.
+      <span style="color: #19b95c">{{ meanStayTime | number }}</span> minutes in
+      XL during visits, which is greater than
+      <span
+        [ngStyle]="{ color: getColorForPercentage(longerStayPercentage) }"
+        >{{ longerStayPercentage | number: '1.2-2' }}</span
+      >% of the community.
     </p>
   </div>
 </div>
