Technical Docs, CSS, Design Doc

--- a/frontend/src/app/coworking/personal-stats-spec/personal-stats-spec.component.html
+++ b/frontend/src/app/coworking/personal-stats-spec/personal-stats-spec.component.html
@@ -72,7 +72,7 @@
   </ng-template>
 </div>
 <div class="statistics-section" style="padding-left: 20px">
-  <mat-form-field style="padding-left: 10px">
+  <mat-form-field style="padding-left: 10px" class="dropdown">
     <mat-label>Time Range</mat-label>
     <mat-select [(value)]="timeRange" (selectionChange)="fetchStatistics()">
       <mat-option *ngFor="let range of timeRangeOptions" [value]="range">
@@ -83,9 +83,9 @@
 
   <div *ngIf="statsFetched">
     <p style="font-size: 18px; padding-left: 10px; font-weight: 450">
-      During the past {{ timeRange }}, you averaged stayed
-      <span style="color: #19b95c">{{ meanStayTime | number }}</span> minutes in
-      XL during visits, which is greater than
+      During the past {{ timeRange }}, you stayed an average of
+      <span style="color: #19b95c">{{ meanStayTime | number }}</span> minutes in the
+      XL, which is greater than
       <span
         [ngStyle]="{ color: getColorForPercentage(longerStayPercentage) }"
         >{{ longerStayPercentage | number: '1.2-2' }}</span
